--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
+:root {
+    --white: #f9faf8;
+    --light-blue: #3882f6;
+}
+
 * {
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Roboto, sans-serif;
 }
+
 
 .flex-container {
     display: flex;
@@ -16,18 +23,49 @@ body {
     gap: 50px;
 }
 
-p {
+#header-text {
     font-size: 1.5em;
     font-weight: lighter;
 }
 
 .btn {
-    background-color: #3882f6;
-    color: #f9faf8;
+    background-color: var(--light-blue);
+    color: var(--white);
     border: 0;
-    border-radius: 7px;
-    width: 250px;
-    height: 2rem;
-    font-weight: bold;
+    border-radius: 5px;
+    width: 180px;
+    height: 30px;
+    font-weight: 900;
+    font-size: 12px;
 }
 
+.btn-container {
+    display: flex;
+    gap: 12px;
+}
+
+#game-results {
+    border: 5px dotted var(--light-blue);
+    width: 564px;
+    height: 150px;
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.computer-score {
+    align-self: flex-end;
+}
+
+.final-result {
+    align-self: center;
+    font-size: 20px;
+    font-weight: bold;
+    white-space: nowrap;
+}
+
+.user-score, .computer-score {
+    font-size: large;
+    white-space: nowrap;
+}
